--- a/index.html
+++ b/index.html
@@ -25,51 +25,53 @@
         <header class="header">
             <div class="container">
                 <nav class="nav">
-                    <a href="" class="app-logo">
-                        <img src="image/svg/logo.svg" alt="CompanyWebsite" class="app-log__img" />
-                    </a>
-                    <ul class="menu">
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">
-                                Home
-                            </a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">
-                                Destination
-                            </a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">
-                                Near me
-                            </a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">
-                                Events
-                            </a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">
-                                Blog
-                            </a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">
-                                Gallery
-                            </a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">
-                                About
-                            </a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">
-                                Contact us
-                            </a>
-                        </li>
-                    </ul>
+                    <div class="nav__wrapper">
+                        <a href="" class="app-logo">
+                            <img src="image/svg/logo.svg" alt="CompanyWebsite" class="app-log__img" />
+                        </a>
+                        <ul class="menu">
+                            <li class="menu__item">
+                                <a href="#" class="menu__link menu__link--active">
+                                    Home
+                                </a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">
+                                    Destination
+                                </a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">
+                                    Near me
+                                </a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">
+                                    Events
+                                </a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">
+                                    Blog
+                                </a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">
+                                    Gallery
+                                </a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">
+                                    About
+                                </a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">
+                                    Contact us
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                     <!-- Mobile Menu Start -->
                     <div class="nav-menu">
                         <ul class="mobile-menu">
@@ -144,6 +146,6 @@
         </footer>
 
         
-        <script src="" async defer></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
