--- a/index.html
+++ b/index.html
@@ -122,14 +122,22 @@
                         </div>
                     </div>
                     <!-- Mobile Menu End -->
-                    <div class="header__links">
-                        <a href="#" class="header__link">Sign up</a>
-                        <a href="#" class="header__link header__link--border">Sign in</a>
+                    <div class="nav__links">
+                        <a href="#" class="nav__link">Sign up</a>
+                        <a href="#" class="nav__link nav__link--border">Sign in</a>
                     </div>
                     <div class="nav__btn">
                         <span class="nav__btn-line"></span>
                     </div>
                 </nav>
+
+                <div class="header__content">
+                    <h1 class="header__content-title">Find Yourself Outside</h1>
+                    <p class="header__content-caption">
+                        Book unique camping experiences on over 300,000 campsites, cabins, RV parks, public parks and more.
+                    </p>
+                    <a class="btn header__content-link">Discover</a>
+                </div>
             </div>
         </header>
 
