Refinement of nav links and mobile menu

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                     </div>
                     <!-- Mobile Menu Start -->
                     <div class="nav-menu">
+                        <h2 class="nav-menu__title">Camping Website</h2>
                         <ul class="mobile-menu">
                             <li class="mobile-menu__item">
                                 <a href="#" class="mobile-menu__link">
