implement HTML section for services

--- a/index.html
+++ b/index.html
@@ -142,11 +142,38 @@
             </div>
         </header>
 
-        <main> 
+        <main class="main"> 
         <div class='container'>
-            <div class="content">
-                
-            </div>
+            <section class="services">
+                <div class="service">
+                    <img class="service__img" src="/image/fish.png" alt="fish-logo"/>
+                    <h2 class="service__title">Recreation Activities</h2>
+                    <p class="service__caption">
+                        Find the best spots for hunting, fishing & recreational shooting.
+                    </p>
+                </div>
+                <div class="service">
+                    <img class="service__img" src="/image/permits.png" alt="permits-logo"/>
+                    <h2 class="service__title">Permits</h2>
+                    <p class="service__caption">
+                        Obtain permits for access to high-demand locations.
+                    </p>
+                </div>
+                <div class="service">
+                    <img class="service__img" src="/image/toure_ticket.png" alt="toure-ticket-logo"/>
+                    <h2 class="service__title">Tours & Tickets</h2>
+                    <p class="service__caption">
+                        Reserve tours and tickets to participate in events.
+                    </p>
+                </div>
+                <div class="service">
+                    <img class="service__img" src="/image/fire.png" alt="fire-logo"/>
+                    <h2 class="service__title">Camping & Day Use</h2>
+                    <p class="service__caption">
+                        Return to your favorite spot or discover a new one that’s right for you.
+                    </p>
+                </div>
+            </section>
         </div>
         </main>
 
