add html element section destinations

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 
         <main class="main"> 
         <div class='container'>
+            <!-- Services Section Start -->
             <section class="services">
                 <div class="service">
                     <img class="service__img" src="/image/fish.png" alt="fish-logo"/>
@@ -174,6 +175,67 @@
                     </p>
                 </div>
             </section>
+            <!-- Services Section End -->
+
+            <!-- Destination Section Start-->
+             <section class="destinations">
+                <img src="image/destination.png" class="destinations__logo" alt="destinations" />
+                <h2 class="destinations_title">Explore Destination & Activities </h2>
+                <div class="destination">
+                    <div class="destination__box">
+                        <div class="destination__box-banner">
+                            <img src="image/Stuga.png" class="destination__box-banner__img" />
+                            <div class="destination__box-banner__like">
+                                <img src="image/svg-icon/heart_outlet.png" class="destination__box-banner__like-icon"/>                            
+                            </div>
+                            <div class="destination__box-banner__price">
+                                <span class="destination__box-banner__price-title" >$36/night</span>
+                            </div>
+                        </div>
+
+                        <h3 class="destination__box-title"> </h3>
+                        <p class="destination__box-caption"></p>
+                        <a href="#" class="btn destination__box-link"></a>
+                    </div>
+
+                    <div class="destination__box">
+                        <div class="destination__box-banner">
+                            <img src="image/Stuga.png" class="destination__box-banner__img" />
+                            <div class="destination__box-banner__like">
+                                <img src="image/svg-icon/heart_outlet.png" class="destination__box-banner__like-icon"/>                            
+                            </div>
+                            <div class="destination__box-banner__price">
+                                <span class="destination__box-banner__price-title" >$36/night</span>
+                            </div>
+                        </div>
+                        
+                        <h3 class="destination__box-title"> </h3>
+                        <p class="destination__box-caption"></p>
+                        <a href="#" class="btn destination__box-link"></a>
+                    </div>
+
+                    <div class="destination__box">
+                        <div class="destination__box-banner">
+                            <img src="image/Stuga.png" class="destination__box-banner__img" />
+                            <div class="destination__box-banner__like">
+                                <img src="image/svg-icon/heart_outlet.png" class="destination__box-banner__like-icon"/>                            
+                            </div>
+                            <div class="destination__box-banner__price">
+                                <span class="destination__box-banner__price-title" >$36/night</span>
+                            </div>
+                        </div>
+                        
+                        <h3 class="destination__box-title"> </h3>
+                        <p class="destination__box-caption"></p>
+                        <a href="#" class="btn destination__box-link"></a>
+                    </div>
+
+                </div>
+
+                <a href="#" class="destination__btn">View all</a>
+             </section>
+            <!-- Destination Section End-->
+
         </div>
         </main>
 
